--- a/snowflake/snowflake.properties
+++ b/snowflake/snowflake.properties
@@ -1,4 +1,4 @@
-connector.name = snowflake
+connector.name = snowflake_jdbc
 connection-url = jdbc:snowflake://<account_identifier>/?warehouse=<warehouse_name>&db=<database_name>&schema=<schema_name>
 connection-user = <snowflake_username>
 connection-password = <snowflake_password>
