Initial commit for hive

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -1,1 +1,21 @@
-Test
+
+connector.name=hive
+hive.metastore.uri=thrift://hive:9083
+hive.metastore-cache-ttl=30m
+hive.metastore-cache-maximum-size=100000
+hive.file-status-cache-expire-time=30m
+hive.file-status-cache.max-retained-size=1GB
+fs.native-s3.enabled=true
+hive.security=allow-all
+hive.non-managed-table-writes-enabled=true
+hive.metastore-refresh-interval=5m
+hive.delta-lake-catalog-name=deltalake
+hive.iceberg-catalog-name=iceberg
+
+# MV and TSR configuration
+# materialized-views.enabled=true
+# materialized-views.namespace=hive_views
+# materialized-views.storage-schema=views_cache_storage
+# materialized-views.allow-run-as-invoker=true
+# redirection.config-source=SERVICE
+# cache-service.uri=http://coordinator:8180
