Removed native-s3 enabled configuration

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -5,7 +5,7 @@ hive.metastore-cache-ttl=30m
 hive.metastore-cache-maximum-size=100000
 hive.file-status-cache-expire-time=30m
 hive.file-status-cache.max-retained-size=1GB
-fs.native-s3.enabled=true
+# fs.native-s3.enabled=true
 hive.security=allow-all
 hive.non-managed-table-writes-enabled=true
 hive.metastore-refresh-interval=5m
