--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -3,29 +3,8 @@ connector.name = iceberg
 iceberg.catalog.type = hive_metastore 
 iceberg.metastore.uri = thrift://example.net:9083 # Replace with your metastore URI
 
-# File System Access - Choose and configure the appropriate one(s)
-# fs.hadoop.enabled = true # Enable HDFS access if needed
-fs.native-s3.enabled = true # Enable native S3 access if needed
-# Add S3 specific properties like region, credentials etc. 
-
-# File Format & Compression Settings if Needed: PARQUET and ZSTD are defaults and recommended
-iceberg.file-format = PARQUET 
-iceberg.compression-codec = ZSTD 
-
-# Statistics: Enabled by default, crucial for CBO 
-iceberg.table-statistics-enabled = true 
-iceberg.extended-statistics.enabled = true 
-iceberg.extended-statistics.collect-on-write = true 
-
-# Caching: Metadata cache enabled by default on coordinator
-iceberg.metadata-cache.enabled = true 
-# Consider general metadata caching properties for better performance
-metadata.cache-ttl=30m # Example general metadata cache TTL 
-
 # Pushdown & Filtering: Dynamic filtering and projection pushdown enabled by default
-iceberg.dynamic-filtering.wait-timeout = 1s # Default wait time for dynamic filters
 dynamic-row-filtering.enabled = true
-iceberg.projection-pushdown-enabled = true
 
 # File Management & Reads: Sorted writing and bucket execution enabled by default
 iceberg.sorted-writing-enabled = true
@@ -41,4 +20,4 @@ iceberg.expire-snapshots.min-retention = 7d # Default minimum retention for expi
 iceberg.remove-orphan-files.min-retention = 7d # Default minimum retention for removing orphan files
 
 # Security Configuration
-iceberg.security = SYSTEM # For BIAC
+iceberg.security=system
