--- a/oracle/oracle.properties
+++ b/oracle/oracle.properties
@@ -44,7 +44,7 @@ oracle.parallel.max-splits-per-scan=10
 oracle.keep-alive.enabled=true 
 oracle.keep-alive.interval=1m 
 write.batch-size=1000 
-insert.non-transactional-insert.enabled=false # Consider enabling for performance but be aware of potential data corruption [46, 47].
+insert.non-transactional-insert.enabled=false # Consider enabling for performance but be aware of potential data corruption
 
 # Query Metadata
-query.comment-format=Query $QUERY_ID sent by user $USER from Trino. # Append query metadata to Oracle logs [48, 49].
+query.comment-format=Query $QUERY_ID sent by user $USER from Trino. # Append query metadata to Oracle logs
