--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -1,44 +1,31 @@
-# Basic Configuration
-connector.name = iceberg
-iceberg.catalog.type = hive_metastore 
-iceberg.metastore.uri = thrift://example.net:9083 # Replace with your metastore URI
+    connector.name=iceberg
+    iceberg.catalog.type=hive_metastore 
+    hive.metastore.uri=thrift://hive:9083
 
-# File System Access - Choose and configure the appropriate one(s)
-# fs.hadoop.enabled = true # Enable HDFS access if needed
-fs.native-s3.enabled = true # Enable native S3 access if needed
-# Add S3 specific properties like region, credentials etc. 
+    # File System Access - Choose and configure the appropriate one(s)
+    # fs.hadoop.enabled = true # Enable HDFS access if needed
+    # Enable native S3 access if needed
+    # fs.native-s3.enabled = true
+    # Add S3 specific properties like region, credentials etc. 
 
-# File Format & Compression Settings if Needed: PARQUET and ZSTD are defaults and recommended
-iceberg.file-format = PARQUET 
-iceberg.compression-codec = ZSTD 
+    # # File Format & Compression Settings if Needed: PARQUET and ZSTD are defaults and recommended
+    iceberg.file-format = PARQUET 
+    iceberg.compression-codec = ZSTD 
 
-# Statistics: Enabled by default, crucial for CBO 
-iceberg.table-statistics-enabled = true 
-iceberg.extended-statistics.enabled = true 
-iceberg.extended-statistics.collect-on-write = true 
+    # # Statistics: Enabled by default, crucial for CBO 
+    # iceberg.table-statistics-enabled = true 
+    # iceberg.extended-statistics.enabled = true 
+    # iceberg.extended-statistics.collect-on-write = true 
 
-# Caching: Metadata cache enabled by default on coordinator
-iceberg.metadata-cache.enabled = true 
-# Consider general metadata caching properties for better performance
-metadata.cache-ttl=30m # Example general metadata cache TTL 
+    # # Caching: Metadata cache enabled by default on coordinator
+    iceberg.metadata-cache.enabled = true
 
-# Pushdown & Filtering: Dynamic filtering and projection pushdown enabled by default
-iceberg.dynamic-filtering.wait-timeout = 1s # Default wait time for dynamic filters
-dynamic-row-filtering.enabled = true
-iceberg.projection-pushdown-enabled = true
+    # # ORC Bloom Filters can be enabled for ORC tables (requires table property)
+    # # orc.bloom-filters.enabled=true # Example ORC Bloom Filter enablement (from Hive context, applicable concept)
+    
+    # # Maintenance Defaults (Important to understand minimums)
+    iceberg.expire-snapshots.min-retention = 7d
+    iceberg.remove-orphan-files.min-retention = 7d
 
-# File Management & Reads: Sorted writing and bucket execution enabled by default
-iceberg.sorted-writing-enabled = true
-iceberg.bucket-execution = true 
-# ORC Bloom Filters can be enabled for ORC tables (requires table property)
-# orc.bloom-filters.enabled=true # Example ORC Bloom Filter enablement (from Hive context, applicable concept)
-
-# Materialized Views: Incremental refresh preferred and enabled by default
-iceberg.incremental-refresh-enabled = true
-
-# Maintenance Defaults (Important to understand minimums)
-iceberg.expire-snapshots.min-retention = 7d # Default minimum retention for expiring snapshots
-iceberg.remove-orphan-files.min-retention = 7d # Default minimum retention for removing orphan files
-
-# Security Configuration
-iceberg.security = SYSTEM # For BIAC
+    # # Security Configuration
+    iceberg.security=system
