--- a/oracle/oracle.properties
+++ b/oracle/oracle.properties
@@ -1,50 +1,61 @@
-connector.name=oracle
-connection-url=jdbc:oracle:thin:@<hostname>:<port>:<SID_or_service_name>
-connection-user=<username>
-connection-password=<password>
+    connector.name=oracle
+    connection-url=jdbc:oracle:thin:@<hostname>:<port>:<SID_or_service_name>
+    connection-user=<username>
+    connection-password=<password>
 
-# Maximize Computation Pushdowns
-join-pushdown.enabled=true
-join-pushdown.strategy=AUTOMATIC 
-dynamic-filtering.enabled=true # Dynamic filtering is enabled by default.
-domain-compaction-threshold=256 # Adjust if needed for large dynamic filters 
+    # Maximize Computation Pushdowns
+    join-pushdown.enabled=true
+    join-pushdown.strategy=AUTOMATIC 
+    # Dynamic filtering is enabled by default.
+    dynamic-filtering.enabled=true
+    # Adjust if needed for large dynamic filters 
+    domain-compaction-threshold=256
 
-# Leverage Metadata Caching
-metadata.cache-ttl=30m # Adjust based on the frequency of schema changes.
-metadata.schemas.cache-ttl=1h 
-metadata.tables.cache-ttl=30m 
-metadata.cache-maximum-size=10000 # Maximum number of objects in the metadata cache.
+    # Leverage Metadata Caching
+    # Adjust based on the frequency of schema changes.
+    metadata.cache-ttl=30m
+    metadata.schemas.cache-ttl=1h
+    metadata.tables.cache-ttl=30m
+    # Maximum number of objects in the metadata cache.
+    metadata.cache-maximum-size=10000
 
-# Utilize Table and Column Statistics from the Data Source
-# The Oracle connector can use table and column statistics collected by Oracle.
-# Ensure statistics are gathered in your Oracle database using:
-# EXECUTE DBMS_STATS.GATHER_TABLE_STATS('USER_NAME', 'TABLE_NAME');
-metadata.statistics.cache-ttl=1h 
-metadata.cache-missing=true 
+    # Utilize Table and Column Statistics from the Data Source
+    # The Oracle connector can use table and column statistics collected by Oracle.
+    # Ensure statistics are gathered in your Oracle database using:
+    # EXECUTE DBMS_STATS.GATHER_TABLE_STATS('USER_NAME', 'TABLE_NAME');
+    metadata.statistics.cache-ttl=1h
+    metadata.cache-missing=true
 
-# Utilize Connection Pooling
-oracle.connection-pool.enabled=true 
-oracle.connection-pool.max-size=30 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
-oracle.connection-pool.min-size=1 # Minimum size of the connection pool.
-oracle.connection-pool.inactive-timeout=20m # Inactive connection timeout
+    # Utilize Connection Pooling
+    oracle.connection-pool.enabled=true
+    # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
+    oracle.connection-pool.max-size=30
+    # Minimum size of the connection pool.
+    oracle.connection-pool.min-size=1
+    # Inactive connection timeout
+    oracle.connection-pool.inactive-timeout=20m
 
-# Configure Fallback for Unmapped Data Types
-unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
+    # Configure Fallback for Unmapped Data Types
+    # Convert unsupported types to unbounded VARCHAR 
+    unsupported-type-handling=CONVERT_TO_VARCHAR
 
-# Starburst treats object names case-insensitively by default. If your Oracle database has case-sensitive object names, consider:
-case-insensitive-name-matching=true # Enable case-insensitive name matching. Be aware of potential performance impacts on metadata fetching.
-case-insensitive-name-matching.cache-ttl=20m # Cache duration for case-insensitive name mappings.
-# case-insensitive-name-matching.config-file=/path/to/case-mapping.json
-# case-insensitive-name-matching.config-file.refresh-period=30s # Enable automatic refresh of the mapping file.
+    # Starburst treats object names case-insensitively by default. If your Oracle database has case-sensitive object names, consider:
+    # Enable case-insensitive name matching. Be aware of potential performance impacts on metadata fetching.
+    # case-insensitive-name-matching=true
+    # case-insensitive-name-matching.config-file=/path/to/case-mapping.json
+    # Enable automatic refresh of the mapping file.
+    # case-insensitive-name-matching.config-file.refresh-period=30s
 
-oracle.parallelism-type=PARTITIONS 
-oracle.parallel.max-splits-per-scan=10 
+    oracle.parallelism-type=PARTITIONS
+    oracle.parallel.max-splits-per-scan=10
 
     # Additional Performance Considerations
-oracle.keep-alive.enabled=true 
-oracle.keep-alive.interval=1m 
-write.batch-size=1000 
-insert.non-transactional-insert.enabled=false # Consider enabling for performance but be aware of potential data corruption
+    oracle.keep-alive.enabled=true
+    oracle.keep-alive.interval=1m
+    write.batch-size=1000
+    # Consider enabling for performance but be aware of potential data corruption
+    insert.non-transactional-insert.enabled=false
 
-# Query Metadata
-query.comment-format=Query $QUERY_ID sent by user $USER from Trino. # Append query metadata to Oracle logs
+    # Query Metadata
+    # Append query metadata to Oracle logs
+    query.comment-format=Query $QUERY_ID sent by user $USER from Trino
