Set oracle pushdown to EAGER

--- a/oracle/oracle.properties
+++ b/oracle/oracle.properties
@@ -5,7 +5,7 @@
 
     # Maximize Computation Pushdowns
     join-pushdown.enabled=true
-    join-pushdown.strategy=AUTOMATIC 
+    join-pushdown.strategy=EAGER 
     # Dynamic filtering is enabled by default.
     dynamic-filtering.enabled=true
     # Adjust if needed for large dynamic filters 
