Fixed Snowflake properties

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -5,7 +5,20 @@ hive.metastore-cache-ttl=30m
 hive.metastore-cache-maximum-size=100000
 hive.file-status-cache-expire-time=30m
 hive.file-status-cache.max-retained-size=1GB
-# fs.native-s3.enabled=true
+
+
+
+# File System Access - Choose and configure the appropriate one(s)
+
+# Hadoop
+# fs.hadoop.enabled = true # Enable HDFS access if needed
+    
+# S3 
+# fs.native-s3.enabled = true
+
+# ADLS
+# 
+
 hive.security=allow-all
 hive.non-managed-table-writes-enabled=true
 hive.metastore-refresh-interval=5m
@@ -16,6 +29,5 @@ hive.iceberg-catalog-name=iceberg
 # materialized-views.enabled=true
 # materialized-views.namespace=hive_views
 # materialized-views.storage-schema=views_cache_storage
-# materialized-views.allow-run-as-invoker=true
 # redirection.config-source=SERVICE
 # cache-service.uri=http://coordinator:8180
