--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -4,10 +4,16 @@
     hive.metastore.uri=thrift://hive:9083
 
     # File System Access - Choose and configure the appropriate one(s)
+
+    # Hadoop
     # fs.hadoop.enabled = true # Enable HDFS access if needed
-    # Enable native S3 access if needed
+    
+    # S3 
     # fs.native-s3.enabled = true
-    # Add S3 specific properties like region, credentials etc. 
+
+    # ADLS
+    # 
+
 
     # # File Format & Compression Settings if Needed: PARQUET and ZSTD are defaults and recommended
     iceberg.file-format = PARQUET 
@@ -21,12 +27,12 @@
     # # Caching: Metadata cache enabled by default on coordinator
     iceberg.metadata-cache.enabled = true
 
-    # # ORC Bloom Filters can be enabled for ORC tables (requires table property)
-    # # orc.bloom-filters.enabled=true # Example ORC Bloom Filter enablement (from Hive context, applicable concept)
+    # ORC Bloom Filters can be enabled for ORC tables (requires table property)
+    # orc.bloom-filters.enabled=true # Example ORC Bloom Filter enablement (from Hive context, applicable concept)
     
-    # # Maintenance Defaults (Important to understand minimums)
+    # Maintenance Defaults (Important to understand minimums)
     iceberg.expire-snapshots.min-retention = 7d
     iceberg.remove-orphan-files.min-retention = 7d
 
-    # # Security Configuration
+    # Security Configuration
     iceberg.security=system
