--- a/snowflake/snowflake_jdbc.properties
+++ b/snowflake/snowflake_jdbc.properties
@@ -3,10 +3,16 @@ connection-url = jdbc:snowflake://<account_identifier>/?warehouse=<warehouse_nam
 connection-user = <snowflake_username>
 connection-password = <snowflake_password>
 
-
 # Maximize Computation Pushdowns
-snowflake.experimental-pushdown.enabled=true
 join-pushdown.enabled=ENABLED
+snowflake.experimental-pushdown.enabled=true
+complex-expression-pushdown.enabled=true    # These 2 settings are 
+topn-pushdown.enabled=true                  # undocumented?
+
+# Enable Managed statistics collection
+managed-statistics.enabled=true
+metadata.statistics.cache-ttl=1h 
+metadata.cache-missing=true 
 
 # Leverage Metadata Caching
 metadata.cache-ttl=30m # Adjust based on the frequency of schema changes.
@@ -14,15 +20,9 @@ metadata.schemas.cache-ttl=1h
 metadata.tables.cache-ttl=30m 
 metadata.cache-maximum-size=10000 # Maximum number of objects in the metadata cache.
 
-# Utilize Table and Column Statistics from the Data Source
-metadata.statistics.cache-ttl=1h 
-metadata.cache-missing=true 
-
 # Utilize Connection Pooling
-oracle.connection-pool.enabled=true 
-oracle.connection-pool.max-size=30 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
-oracle.connection-pool.min-size=1 # Minimum size of the connection pool.
-oracle.connection-pool.inactive-timeout=20m # Inactive connection timeout
+connection-pool.enabled=true
+connection-pool.max-size=10 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
 
 # Configure Fallback for Unmapped Data Types
 unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
@@ -33,5 +33,6 @@ case-insensitive-name-matching.cache-ttl=20m # Cache duration for case-insensiti
 # case-insensitive-name-matching.config-file=/path/to/case-mapping.json
 # case-insensitive-name-matching.config-file.refresh-period=30s # Enable automatic refresh of the mapping file.
 
-
-
+# Enable Tablescan redirection
+# redirection.config-source=SERVICE
+# cache-service.uri=http://coordinator:8180
