--- a/teradata/teradata_direct.properties
+++ b/teradata/teradata_direct.properties
@@ -11,6 +11,8 @@ teradata-direct.table-operator.name=tpch.starburst_table_operator
 teradata-direct.http.port=9000
 teradata-direct.table-operator.logging-path=/var/log/teradata-direct
 
+# Pushdown settings
+join-pushdown.enabled
 join-pushdown.strategy=EAGER
 
 # Metadata cache 
