--- a/teradata/teradata_jdbc.properties
+++ b/teradata/teradata_jdbc.properties
@@ -10,6 +10,9 @@ teradata.connections-count=10 #Set to number of workers
 
 # Configure Fallback for Unmapped Data Types
 unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
+
+#Pushdown settings
+join-pushdown.enabled=true
 join-pushdown.strategy=EAGER
 
 
