Fixed Teradata connections

--- a/teradata/teradata_direct.properties
+++ b/teradata/teradata_direct.properties
@@ -1,18 +1,20 @@
 
 connector.name=teradata-direct
-connection-url=jdbc:teradata://<TeradataDBPathName>/TMODE=ANSI
+connection-url=jdbc:teradata://<TeradataDBPathName>/TMODE=ANSI # Verify transaction mode requirements
 connection-user=<TeradataDBUsername>
 connection-password=<TeradataDBPassword>
 
 teradata.query-band.query-id.enabled=true
 teradata.query-pass-through.enabled=true
+
+# TD Direct Connector Settings
 teradata-direct.table-operator.logging-level=DEBUG # Set to INFO for production
 teradata-direct.table-operator.name=tpch.starburst_table_operator
 teradata-direct.http.port=9000
 teradata-direct.table-operator.logging-path=/var/log/teradata-direct
 
-# Pushdown settings
-join-pushdown.enabled
+# Maximize Computation Pushdowns
+join-pushdown.enabled=true
 join-pushdown.strategy=EAGER
 
 # Metadata cache 
@@ -22,6 +24,19 @@ metadata.schemas.cache-ttl=30m
 metadata.tables.cache-ttl=30m
 metadata.statistics.cache-ttl=30m
 metadata.cache-maximum-size=10000
+
+# Table Scan Redirection
+# redirection.config-source=SERVICE
+# cache-service.uri=http://coordinator:8180
+
+# Configure Fallback for Unmapped Data Types
+unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
+
+# Impersonation Settings:
+teradata.impersonation.enabled=true
+authorization.enabled=true # To make use of DEFINER mode for Teradata Views
+# teradata.impersonation-role=table_operator_users # role to be used by any impersonated user
+
 
 
 
