--- a/teradata/teradata_jdbc.properties
+++ b/teradata/teradata_jdbc.properties
@@ -3,20 +3,25 @@ connection-url=jdbc:teradata://<TeradataDBPathName>/TMODE=ANSI
 connection-user=<TeradataDBUsername>
 connection-password=<TeradataDBPassword>
 
+# Query Identification
 teradata.query-band.query-id.enabled=true
 teradata.query-pass-through.enabled=true
 
-teradata.connections-count=10 #Set to number of workers
+# Parallelism
+teradata.connections-count=10 # Set to number of workers
 
 # Configure Fallback for Unmapped Data Types
 unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
 
-#Pushdown settings
+# Maximize Computation Pushdowns
 join-pushdown.enabled=true
 join-pushdown.strategy=EAGER
 
+# Utilize Connection Pooling
+connection-pool.enabled=true
+connection-pool.max-size=10 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
 
-# Metadata cache 
+# Metadata caching
 metadata.cache-ttl=30m
 metadata.cache-missing=true
 metadata.schemas.cache-ttl=30m
@@ -24,7 +29,11 @@ metadata.tables.cache-ttl=30m
 metadata.statistics.cache-ttl=30m
 metadata.cache-maximum-size=10000
 
-
-
+# Table Scan Redirection
 #redirection.config-source=SERVICE
 #cache-service.uri=http://coordinator:8180
+
+# Impersonation Settings:
+teradata.impersonation.enabled=true
+authorization.enabled=true # To make use of DEFINER mode for Teradata Views
+
