Updated Hive Properties

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -1,23 +1,63 @@
 
 connector.name=hive
+
+# Metastore Settings
 hive.metastore.uri=thrift://hive:9083
 hive.metastore-cache-ttl=30m
 hive.metastore-cache-maximum-size=100000
 hive.file-status-cache-expire-time=30m
 hive.file-status-cache.max-retained-size=1GB
 
+# # If using glue as metastore
+# hive.metastore=glue
+# hive.metastore.glue.region=<AWS Region>
+# hive.metastore.glue.catalogid=<Glue Catalog ID>
+# # IF using access key and secret key for authentication
+# hive.metastore.glue.aws-access-key=<Access Key>
+# hive.metastore.glue.aws-secret-key=<Secret Key>
+# # IF using IAM role for authentication
+# hive.metastore.glue.iam-role=<Glue IAM Role ARN>
 
 
 # File System Access - Choose and configure the appropriate one(s)
 
 # Hadoop
 # fs.hadoop.enabled = true # Enable HDFS access if needed
-    
+# hive.config.resources=<Comma separated list of Hadoop configuration files> # e.g. /etc/hadoop/conf/core-site.xml,/etc/hadoop/conf/hdfs-site.xml
+# hive.hdfs.authentication.type=KERBEROS # If using Kerberos authentication
+# hive.hdfs.impersonation.enabled=true # Enable impersonation for HDFS access
+# hive.hdfs.trino.principal=<Principal>
+# hive.hdfs.trino.keytab=<Path to Keytab>
+
 # S3 
 # fs.native-s3.enabled = true
+# s3.endpoint=<S3 Endpoint. Required for S3>
+# s3.region=<S3 Region. Required for S3>
+# s3.aws-access-key=<Access Key used for authentication>
+# s3.aws-secret-key=<AWS Secret used for authentication>
 
 # ADLS
-# 
+# fs.native-azure.enabled = true
+# azure.auth-type=ACCES_KEY #or OAuth2s
+# azure.endpoin= <ADLS Endpoint>
+# if using Access KEy
+# azure.access-key
+# If using OAuth2 for authentication to filesystem (ADLS)
+# azure.oauth.tenant-id=
+# azure.oauth.endpoint=
+# azure.oauth.client-id=
+# azure.oauth.secret=
+
+# GCS
+# fs.gcs.enabled = true
+# gcs.project-id=<Google Project ID>
+# gcs.endpoint=<Google Storage Endpoint if using custom URL>
+# # If using access token for authentication
+# gcs.use-access-token=true
+# # If providing key directly
+# gcs.json-key=<Service account key in JSON format>
+# # If key is in a file
+# gcs.json-key-file-path=<File path to json file containing key>
 
 hive.security=allow-all
 hive.non-managed-table-writes-enabled=true
@@ -31,3 +71,5 @@ hive.iceberg-catalog-name=iceberg
 # materialized-views.storage-schema=views_cache_storage
 # redirection.config-source=SERVICE
 # cache-service.uri=http://coordinator:8180
+
+
