--- a/oracle/oracle.properties
+++ b/oracle/oracle.properties
@@ -1,61 +1,67 @@
-    connector.name=oracle
-    connection-url=jdbc:oracle:thin:@<hostname>:<port>:<SID_or_service_name>
-    connection-user=<username>
-    connection-password=<password>
+connector.name=oracle
+# The correct syntax of the connection-url varies by Oracle version and
+# configuration. The following example URL connects to an Oracle SID named
+# "orcl".
+connection-url=jdbc:oracle:thin:@<hostname>:<port>:<SID_or_service_name>
+connection-user=<username>
+connection-password=<password>
 
-    # Maximize Computation Pushdowns
-    join-pushdown.enabled=true
-    join-pushdown.strategy=EAGER 
-    # Dynamic filtering is enabled by default.
-    dynamic-filtering.enabled=true
-    # Adjust if needed for large dynamic filters 
-    domain-compaction-threshold=256
+# Maximize Computation Pushdowns
+join-pushdown.enabled=true
+join-pushdown.strategy=EAGER 
 
-    # Leverage Metadata Caching
-    # Adjust based on the frequency of schema changes.
-    metadata.cache-ttl=30m
-    metadata.schemas.cache-ttl=1h
-    metadata.tables.cache-ttl=30m
-    # Maximum number of objects in the metadata cache.
-    metadata.cache-maximum-size=10000
+# Leverage Metadata Caching
+# Adjust based on the frequency of schema changes.
+metadata.cache-ttl=30m
+metadata.schemas.cache-ttl=1h
+metadata.tables.cache-ttl=30m
+# Maximum number of objects in the metadata cache.
+metadata.cache-maximum-size=10000
 
-    # Utilize Table and Column Statistics from the Data Source
-    # The Oracle connector can use table and column statistics collected by Oracle.
-    # Ensure statistics are gathered in your Oracle database using:
-    # EXECUTE DBMS_STATS.GATHER_TABLE_STATS('USER_NAME', 'TABLE_NAME');
-    metadata.statistics.cache-ttl=1h
-    metadata.cache-missing=true
+# Utilize Table and Column Statistics from the Data Source
+# The Oracle connector can use table and column statistics collected by Oracle.
+# Ensure statistics are gathered in your Oracle database using:
+# EXECUTE DBMS_STATS.GATHER_TABLE_STATS('USER_NAME', 'TABLE_NAME');
+metadata.statistics.cache-ttl=1h
+metadata.cache-missing=true
 
-    # Utilize Connection Pooling
-    oracle.connection-pool.enabled=true
-    # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
-    oracle.connection-pool.max-size=30
-    # Minimum size of the connection pool.
-    oracle.connection-pool.min-size=1
-    # Inactive connection timeout
-    oracle.connection-pool.inactive-timeout=20m
+# Utilize Connection Pooling
+oracle.connection-pool.enabled=true
+oracle.connection-pool.max-size=30 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
+oracle.connection-pool.min-size=1 # Minimum size of the connection pool.
+oracle.connection-pool.inactive-timeout=20m # Inactive connection timeout
 
-    # Configure Fallback for Unmapped Data Types
-    # Convert unsupported types to unbounded VARCHAR 
-    unsupported-type-handling=CONVERT_TO_VARCHAR
 
-    # Starburst treats object names case-insensitively by default. If your Oracle database has case-sensitive object names, consider:
-    # Enable case-insensitive name matching. Be aware of potential performance impacts on metadata fetching.
-    # case-insensitive-name-matching=true
-    # case-insensitive-name-matching.config-file=/path/to/case-mapping.json
-    # Enable automatic refresh of the mapping file.
-    # case-insensitive-name-matching.config-file.refresh-period=30s
+# Configure Fallback for Unmapped Data Types
+# Convert unsupported types to unbounded VARCHAR 
+unsupported-type-handling=CONVERT_TO_VARCHAR
 
-    oracle.parallelism-type=PARTITIONS
-    oracle.parallel.max-splits-per-scan=10
+# Starburst treats object names case-insensitively by default. If your Oracle database has case-sensitive object names, consider:
+# Enable case-insensitive name matching. Be aware of potential performance impacts on metadata fetching.
+# case-insensitive-name-matching=true
+# case-insensitive-name-matching.config-file=/path/to/case-mapping.json
+# Enable automatic refresh of the mapping file.
+# case-insensitive-name-matching.config-file.refresh-period=30s
 
-    # Additional Performance Considerations
-    oracle.keep-alive.enabled=true
-    oracle.keep-alive.interval=1m
-    write.batch-size=1000
-    # Consider enabling for performance but be aware of potential data corruption
-    insert.non-transactional-insert.enabled=false
+oracle.parallelism-type=PARTITIONS
+oracle.parallel.max-splits-per-scan=10
 
-    # Query Metadata
-    # Append query metadata to Oracle logs
-    query.comment-format=Query $QUERY_ID sent by user $USER from Trino
+# Additional Performance Considerations
+oracle.keep-alive.enabled=true
+oracle.keep-alive.interval=1m
+write.batch-size=1000
+
+# Consider enabling for performance but be aware of potential data corruption
+insert.non-transactional-insert.enabled=false
+
+# Query Metadata
+# Append query metadata to Oracle logs
+query.comment-format=Query $QUERY_ID sent by user $USER from Trino
+
+# Number to Decimal Configuration
+# https://docs.starburst.io/latest/connector/oracle.html#mapping-numeric-types#number-to-decimal-configuration-properties
+# Unbounded number type:
+oracle.number.default-scale=15
+oracle.number.rounding-mode=HALF_UP # Adjust based on requirements
+
+
