--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -1,37 +1,68 @@
 connector.name=hive
 
-# Metastore Settings
+# If using HMS as Metastore
 hive.metastore.uri=thrift://hive:9083
-hive.metastore-cache-ttl=30m
-hive.metastore-cache-maximum-size=100000
-hive.file-status-cache-expire-time=30m
-hive.file-status-cache.max-retained-size=1GB
+hive.metastore=<thrift or thrift-cdp7> #only use thrift-cdp7 if connecting to CDP7.x
+hive.metastore.authentication.type=<NONE or KERBEROS>
+hive.metastore.thrift.impersonation.enabled=false
+hive.metastore.service.principal=<user/host@DOMAIN>
+hive.metastore.client.principal=<user@DOMAIN>
+hive.metastore.client.keytab=</tmp/keytabs/my.keytab>
+hive.metastore.thrift.catalog-name=<hive>
 
-# # If using glue as metastore
+# If using Glue as Metastore
 # hive.metastore=glue
 # hive.metastore.glue.region=<AWS Region>
 # hive.metastore.glue.catalogid=<Glue Catalog ID>
-# # IF using access key and secret key for authentication
+# IF using access key and secret key for authentication
 # hive.metastore.glue.aws-access-key=<Access Key>
 # hive.metastore.glue.aws-secret-key=<Secret Key>
-# # IF using IAM role for authentication
+# IF using IAM role for authentication
 # hive.metastore.glue.iam-role=<Glue IAM Role ARN>
 
+# File Settings
+hive.storage-format=PARQUET
+hive.compression-codec=ZSTD
+hive.ignore-absent-partitions=true
+
+# Hive Views
+hive.hive-views.legacy-translation=true
+hive.hive-views.enabled=true
+
+# Security Settings
+hive.security=starburst
+hive.non-managed-table-writes-enabled=true
+
+# Metastore Cache
+hive.metastore-cache-ttl=30m
+hive.metastore-cache-maximum-size=100000
+hive.metastore-refresh-interval=5m
+
+# File System Cache
+hive.file-status-cache-tables=<my_schema_1>.*,<my_schema_2>.<my_table_1>
+hive.file-status-cache-expire-time=30m
+hive.file-status-cache.max-retained-size=1GB
+
+# Catalog Redirects
+# hive.delta-lake-catalog-name=<deltalake_catalog>
+# hive.iceberg-catalog-name=<iceberg_catalog>
 
 # File System Access - Choose and configure the appropriate one(s)
 
 # Hadoop
 # fs.hadoop.enabled = true # Enable HDFS access if needed
+# hive.fs.new-directory-permissions=skip
 # hive.config.resources=<Comma separated list of Hadoop configuration files> # e.g. /etc/hadoop/conf/core-site.xml,/etc/hadoop/conf/hdfs-site.xml
 # hive.hdfs.authentication.type=KERBEROS # If using Kerberos authentication
-# hive.hdfs.impersonation.enabled=true # Enable impersonation for HDFS access
-# hive.hdfs.trino.principal=<Principal>
-# hive.hdfs.trino.keytab=<Path to Keytab>
+# hive.hdfs.impersonation.enabled=false # Enable impersonation for HDFS access
+# hive.hdfs.trino.principal=<user@DOMAIN>
+# hive.hdfs.trino.keytab=</tmp/keytabs/my.keytab>
 
 # S3 
 # fs.native-s3.enabled = true
 # s3.endpoint=<S3 Endpoint. Required for S3>
-# s3.region=<S3 Region. Required for S3>
+# s3.region=<S3 Region. Mandatory parameter even for on-prem S3-compatible storage>
+# s3.path-style-access=false #Use "false" for AWS S3 and "true" for everything else that is S3-comptabile.
 # s3.aws-access-key=<Access Key used for authentication>
 # s3.aws-secret-key=<AWS Secret used for authentication>
 
@@ -58,17 +89,9 @@ hive.file-status-cache.max-retained-size=1GB
 # # If key is in a file
 # gcs.json-key-file-path=<File path to json file containing key>
 
-hive.security=allow-all
-hive.non-managed-table-writes-enabled=true
-hive.metastore-refresh-interval=5m
-hive.delta-lake-catalog-name=deltalake
-hive.iceberg-catalog-name=iceberg
-
 # MV and TSR configuration
 # materialized-views.enabled=true
-# materialized-views.namespace=hive_views
-# materialized-views.storage-schema=views_cache_storage
+# materialized-views.namespace=catalog_hive_namespace
+# materialized-views.storage-schema=mv_cache_storage
 # redirection.config-source=SERVICE
-# cache-service.uri=http://coordinator:8180
-
-
+# cache-service.uri=http://coordinator:8180 
