--- a/snowflake/snowflake_parallel.properties
+++ b/snowflake/snowflake_parallel.properties
@@ -1,24 +1,30 @@
 connector.name = snowflake_parallel
-connection-url = jdbc:snowflake://<account_identifier>/?warehouse=<warehouse_name>&db=<database_name>&schema=<schema_name>
+connection-url = jdbc:snowflake://<account_identifier>/
 connection-user = <snowflake_username>
 connection-password = <snowflake_password>
+snowflake.warehouse=<snowflake-warehouse>
+snowflake.database=<snowflake-database>
+snowflake.role=<snowflake-role>
 
 # Maximize Computation Pushdowns
+join-pushdown.enabled=true
+complex-expression-pushdown.enabled=true
+aggregation-pushdown.enabled=true
+topn-pushdown.enabled=true
 snowflake.experimental-pushdown.enabled=true
-join-pushdown.enabled=ENABLED
-complex-expression-pushdown.enabled=true    # These 2 settings are 
-topn-pushdown.enabled=true                  # undocumented?
-
-# Enable Managed statistics collection
-managed-statistics.enabled=true
-metadata.statistics.cache-ttl=1h 
-metadata.cache-missing=true 
 
 # Leverage Metadata Caching
 metadata.cache-ttl=30m # Adjust based on the frequency of schema changes.
+metadata.cache-missing=true
 metadata.schemas.cache-ttl=1h 
 metadata.tables.cache-ttl=30m 
-metadata.cache-maximum-size=10000 # Maximum number of objects in the metadata cache.
+metadata.cache-maximum-size=100000 # Maximum number of objects in the metadata cache.
+
+# Enable Regular and Managed Statistics
+statistics.enabled=true
+managed-statistics.enabled=true
+managed-statistics.cache-maximum-size=10000
+metadata.statistics.cache-ttl=6h
 
 # Utilize Connection Pooling
 connection-pool.enabled=true
@@ -27,14 +33,9 @@ connection-pool.max-size=10 # Maximum size of the connection pool per worker. Ad
 # Configure Fallback for Unmapped Data Types
 unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
 
-# Starburst treats object names case-insensitively by default. If your Oracle database has case-sensitive object names, consider:
-case-insensitive-name-matching=true # Enable case-insensitive name matching. Be aware of potential performance impacts on metadata fetching.
-case-insensitive-name-matching.cache-ttl=20m # Cache duration for case-insensitive name mappings.
+# Starburst treats object names case-insensitively by default. 
+# If your Snowflake database has case-sensitive object names, consider:
+# case-insensitive-name-matching=true # Be aware of potential performance impacts on metadata fetching.
+# case-insensitive-name-matching.cache-ttl=20m # Cache duration for case-insensitive name mappings.
 # case-insensitive-name-matching.config-file=/path/to/case-mapping.json
 # case-insensitive-name-matching.config-file.refresh-period=30s # Enable automatic refresh of the mapping file.
-
-# Enable Tablescan redirection
-# redirection.config-source=SERVICE
-# cache-service.uri=http://coordinator:8180
-
-
