Updated iceberg. Patterned after Hive

--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -1,12 +1,18 @@
 
 connector.name=iceberg
 
-# Metastore Settings
 
-# If using hive metastore
+# If using HMS as Metastore
 iceberg.catalog.type=hive_metastore 
-# If using thrift
 hive.metastore.uri=thrift://hive:9083
+hive.metastore=<thrift or thrift-cdp7> #only use thrift-cdp7 if connecting to CDP7.x
+# If setting up with authentication:
+# hive.metastore.authentication.type=<NONE or KERBEROS>
+# hive.metastore.thrift.impersonation.enabled=false
+# hive.metastore.service.principal=<user/host@DOMAIN>
+# hive.metastore.client.principal=<user@DOMAIN>
+# hive.metastore.client.keytab=</tmp/keytabs/my.keytab>
+# hive.metastore.thrift.catalog-name=<hive>
 
 # # If using glue as metastore
 # iceberg.catalog.type=glue
@@ -23,6 +29,10 @@ hive.metastore.uri=thrift://hive:9083
 hive.metastore-cache-ttl=30m
 hive.metastore-cache-maximum-size=100000
 hive.metastore-refresh-interval=10m
+## File System Cache
+hive.file-status-cache-tables=<my_schema_1>.*,<my_schema_2>.<my_table_1>
+hive.file-status-cache-expire-time=30m
+hive.file-status-cache.max-retained-size=1GB
 
 # If using REST catalogs
 iceberg.catalog.type=rest
@@ -85,6 +95,10 @@ iceberg.nessie-catalog.authentication.token=<Bearer Token>
 # gcs.json-key-file-path=<File path to json file containing key>
 
 
+
+# Catalog Redirects
+# iceberg.hive-catalog-name=<hive_catalog>>
+
 # Enable register table for external tables:
 iceberg.register-table-procedure.enabled=true
 
@@ -110,3 +124,8 @@ iceberg.remove-orphan-files.min-retention = 7d
 # Security Configuration
 iceberg.security=system
 # iceberg.security=read_only ## When connecting to Databricks using REST Catalog
+
+# MV configuration
+# materialized-views.enabled=true
+# materialized-views.namespace=catalog_hive_namespace
+# materialized-views.storage-schema=mv_cache_storage
