--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -1,4 +1,4 @@
-hive: |
+  hive: |
     connector.name=hive
 
     # If using HMS as Metastore
@@ -71,7 +71,7 @@ hive: |
     # ADLS
     # fs.native-azure.enabled = true
     # azure.auth-type=ACCES_KEY #or OAuth2s
-    # azure.endpoin= <ADLS Endpoint>
+    # azure.endpoint= <ADLS Endpoint>
     # if using Access KEy
     # azure.access-key
     # If using OAuth2 for authentication to filesystem (ADLS)
