--- a/snowflake/snowflake_parallel.properties
+++ b/snowflake/snowflake_parallel.properties
@@ -43,3 +43,7 @@
     # case-insensitive-name-matching.cache-ttl=20m # Cache duration for case-insensitive name mappings.
     # case-insensitive-name-matching.config-file=/path/to/case-mapping.json
     # case-insensitive-name-matching.config-file.refresh-period=30s # Enable automatic refresh of the mapping file.
+
+    # Enable Tablescan redirection
+    # redirection.config-source=SERVICE
+    # cache-service.uri=http://coordinator:8180
