--- a/teradata/teradata_direct.properties
+++ b/teradata/teradata_direct.properties
@@ -5,7 +5,6 @@ connection-user=<TeradataDBUsername>
 connection-password=<TeradataDBPassword>
 
 teradata.query-band.query-id.enabled=true
-teradata.query-pass-through.enabled=true
 
 # TD Direct Connector Settings
 teradata-direct.table-operator.logging-level=DEBUG # Set to INFO for production
@@ -30,11 +29,11 @@ metadata.cache-maximum-size=10000
 # cache-service.uri=http://coordinator:8180
 
 # Configure Fallback for Unmapped Data Types
-unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
+unsupported-type-handling=CONVERT_TO_VARCHAR 
 
 # Impersonation Settings:
 teradata.impersonation.enabled=true
-authorization.enabled=true # To make use of DEFINER mode for Teradata Views
+authorization.enabled=true 
 # teradata.impersonation-role=table_operator_users # role to be used by any impersonated user
 
 #redirection.config-source=SERVICE
