--- a/teradata/teradata_jdbc.properties
+++ b/teradata/teradata_jdbc.properties
@@ -5,21 +5,23 @@ connection-password=<TeradataDBPassword>
 
 # Query Identification
 teradata.query-band.query-id.enabled=true
-teradata.query-pass-through.enabled=true
 
 # Parallelism
-teradata.connections-count=10 # Set to number of workers
+# Set to number of workers
+teradata.connections-count=10 
 
 # Configure Fallback for Unmapped Data Types
-unsupported-type-handling=CONVERT_TO_VARCHAR # Convert unsupported types to unbounded VARCHAR 
+# Convert unsupported types to unbounded VARCHAR 
+unsupported-type-handling=CONVERT_TO_VARCHAR 
 
 # Maximize Computation Pushdowns
 join-pushdown.enabled=true
 join-pushdown.strategy=EAGER
 
 # Utilize Connection Pooling
+# Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
 connection-pool.enabled=true
-connection-pool.max-size=10 # Maximum size of the connection pool per worker. Adjust based on your cluster size and workload.
+connection-pool.max-size=10 
 
 # Metadata caching
 metadata.cache-ttl=30m
