Update hive.properties with Starburst Data Catalog metastore

--- a/hive/hive.properties
+++ b/hive/hive.properties
@@ -22,6 +22,15 @@
     # IF using IAM role for authentication
     # hive.metastore.glue.iam-role=<Glue IAM Role ARN>
 
+    # If using Starburst Data catalog as metastore:
+    # connector.name=hive
+    # hive.metastore=glue
+    # hive.metastore.glue.endpoint-url=http://starburst-portal:8080/api/v1/glue
+    # hive.metastore.glue.region=us-east-1
+    # hive.metastore.glue.catalogid=<catalog-namespace>
+    # hive.metastore.glue.aws-access-key=<sep-access-key>
+    # hive.metastore.glue.aws-secret-key=<sep-secret-key>
+
     # File Settings
     hive.storage-format=PARQUET
     hive.compression-codec=ZSTD
