--- a/iceberg/iceberg.properties
+++ b/iceberg/iceberg.properties
@@ -44,6 +44,19 @@
     # iceberg.nessie-catalog.authentication.type=BEARER
     # iceberg.nessie-catalog.authentication.token=<Bearer Token>
 
+
+    # # If using Starburst Data Catalog as Metastore:
+    # connector.name=iceberg
+    # iceberg.catalog.type=glue_v2
+    # hive.metastore.glue.endpoint-url=http://starburst-portal:8080/api/v1/glue
+    # hive.metastore.glue.region=us-east-1
+    # hive.metastore.glue.catalogid=<catalog-namespace>
+    # hive.metastore.glue.aws-access-key=<sep-access-key>
+    # hive.metastore.glue.aws-secret-key=<sep-secret-key>
+    # iceberg.security=system
+    # iceberg.register-table-procedure.enabled=true
+
+
     # File System Access - Choose and configure the appropriate one(s)
 
     # Hadoop  ### Check the correct properties
